<resources>
    <string name="app_name">HowMuchDidYouFindOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_search_button">검색</string>
    <string name="main_search_price">원</string>
    <string name="main_search_item">키워드를 입력하세요</string>
    <string name="register_button">등록</string>
    <string name="email_sentence">email</string>
    <string name="password_sentence">password</string>
    <string name="search_item_push">예</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="not_found1">찾으시는 </string>
    <string name="not_found2">을(를)</string>
    <string name="not_found3">찾지 </string>
    <string name="not_found4"> 못 했습니다</string>
    <string name="blank">공란 입니다</string>
    <string name="warning">주의</string>
    <string name="not_online">인터넷 환경이 불안정합니다. 인터넷 연결 상태를 확인해 주세요</string>
    <string name="not_online_retry">인터넷 환경이 불안정합니다. 재수행 하겠습니다.</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
</resources>
